--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "express": "^4.14.0",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1"
   }
